Initial version on 11/29.

--- a/Python_scripts/ProcessRawData.ipynb
+++ b/Python_scripts/ProcessRawData.ipynb
@@ -22,7 +22,7 @@
     }
    ],
    "source": [
-    "# read data from Kaggle\n",
+    "# read data from Kaggle.\n",
     "import kagglehub\n",
     "\n",
     "# download latest version\n",
