--- a/documents/settings/packages.tex
+++ b/documents/settings/packages.tex
@@ -26,9 +26,5 @@
 \usepackage{threeparttable}  
 % i forget the function of this one, GPT told me to include it :) 
 \usepackage{babel}
-
-
-
-
-
-
+% for multirows
+\usepackage{multirow}
