Supportive materials and files.

--- a/documents/settings/packages.tex
+++ b/documents/settings/packages.tex
@@ -28,3 +28,7 @@
 \usepackage{babel}
 % for multirows
 \usepackage{multirow}
+% for biblatex
+% \usepackage[backend=biber]{biblatex}
+% for hyper link
+\usepackage{hyperref}
