--- a/test.ipynb
+++ b/test.ipynb
@@ -379,6 +379,379 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>date</th>\n",
+       "      <th>meantemp</th>\n",
+       "      <th>humidity</th>\n",
+       "      <th>wind_speed</th>\n",
+       "      <th>meanpressure</th>\n",
+       "      <th>season</th>\n",
+       "      <th>season_Autumn</th>\n",
+       "      <th>season_Spring</th>\n",
+       "      <th>season_Summer</th>\n",
+       "      <th>time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2013-01-01</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>84.500000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1015.666667</td>\n",
+       "      <td>Winter</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2013-01-02</td>\n",
+       "      <td>7.400000</td>\n",
+       "      <td>92.000000</td>\n",
+       "      <td>2.980000</td>\n",
+       "      <td>1017.800000</td>\n",
+       "      <td>Winter</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2013-01-03</td>\n",
+       "      <td>7.166667</td>\n",
+       "      <td>87.000000</td>\n",
+       "      <td>4.633333</td>\n",
+       "      <td>1018.666667</td>\n",
+       "      <td>Winter</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2013-01-04</td>\n",
+       "      <td>8.666667</td>\n",
+       "      <td>71.333333</td>\n",
+       "      <td>1.233333</td>\n",
+       "      <td>1017.166667</td>\n",
+       "      <td>Winter</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2013-01-05</td>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>86.833333</td>\n",
+       "      <td>3.700000</td>\n",
+       "      <td>1016.500000</td>\n",
+       "      <td>Winter</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1457</th>\n",
+       "      <td>1457</td>\n",
+       "      <td>2016-12-28</td>\n",
+       "      <td>17.217391</td>\n",
+       "      <td>68.043478</td>\n",
+       "      <td>3.547826</td>\n",
+       "      <td>1015.565217</td>\n",
+       "      <td>Winter</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1458</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1458</th>\n",
+       "      <td>1458</td>\n",
+       "      <td>2016-12-29</td>\n",
+       "      <td>15.238095</td>\n",
+       "      <td>87.857143</td>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>1016.904762</td>\n",
+       "      <td>Winter</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1459</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1459</th>\n",
+       "      <td>1459</td>\n",
+       "      <td>2016-12-30</td>\n",
+       "      <td>14.095238</td>\n",
+       "      <td>89.666667</td>\n",
+       "      <td>6.266667</td>\n",
+       "      <td>1017.904762</td>\n",
+       "      <td>Winter</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1460</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1460</th>\n",
+       "      <td>1460</td>\n",
+       "      <td>2016-12-31</td>\n",
+       "      <td>15.052632</td>\n",
+       "      <td>87.000000</td>\n",
+       "      <td>7.325000</td>\n",
+       "      <td>1016.100000</td>\n",
+       "      <td>Winter</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1461</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1461</th>\n",
+       "      <td>1461</td>\n",
+       "      <td>2017-01-01</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1016.000000</td>\n",
+       "      <td>Winter</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1462</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1462 rows × 11 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Unnamed: 0        date   meantemp    humidity  wind_speed  meanpressure  \\\n",
+       "0              0  2013-01-01  10.000000   84.500000    0.000000   1015.666667   \n",
+       "1              1  2013-01-02   7.400000   92.000000    2.980000   1017.800000   \n",
+       "2              2  2013-01-03   7.166667   87.000000    4.633333   1018.666667   \n",
+       "3              3  2013-01-04   8.666667   71.333333    1.233333   1017.166667   \n",
+       "4              4  2013-01-05   6.000000   86.833333    3.700000   1016.500000   \n",
+       "...          ...         ...        ...         ...         ...           ...   \n",
+       "1457        1457  2016-12-28  17.217391   68.043478    3.547826   1015.565217   \n",
+       "1458        1458  2016-12-29  15.238095   87.857143    6.000000   1016.904762   \n",
+       "1459        1459  2016-12-30  14.095238   89.666667    6.266667   1017.904762   \n",
+       "1460        1460  2016-12-31  15.052632   87.000000    7.325000   1016.100000   \n",
+       "1461        1461  2017-01-01  10.000000  100.000000    0.000000   1016.000000   \n",
+       "\n",
+       "      season  season_Autumn  season_Spring  season_Summer  time  \n",
+       "0     Winter            0.0            0.0            0.0     1  \n",
+       "1     Winter            0.0            0.0            0.0     2  \n",
+       "2     Winter            0.0            0.0            0.0     3  \n",
+       "3     Winter            0.0            0.0            0.0     4  \n",
+       "4     Winter            0.0            0.0            0.0     5  \n",
+       "...      ...            ...            ...            ...   ...  \n",
+       "1457  Winter            0.0            0.0            0.0  1458  \n",
+       "1458  Winter            0.0            0.0            0.0  1459  \n",
+       "1459  Winter            0.0            0.0            0.0  1460  \n",
+       "1460  Winter            0.0            0.0            0.0  1461  \n",
+       "1461  Winter            0.0            0.0            0.0  1462  \n",
+       "\n",
+       "[1462 rows x 11 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/s5/r1s56_ps46lbbv1370hjn_vr0000gn/T/ipykernel_78621/3643049165.py:1: FutureWarning: The default value of numeric_only in DataFrameGroupBy.mean is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
+      "  train_data.groupby(\"season\").mean()\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>meantemp</th>\n",
+       "      <th>humidity</th>\n",
+       "      <th>wind_speed</th>\n",
+       "      <th>meanpressure</th>\n",
+       "      <th>season_Autumn</th>\n",
+       "      <th>season_Spring</th>\n",
+       "      <th>season_Summer</th>\n",
+       "      <th>time</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>season</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Autumn</th>\n",
+       "      <td>835.750000</td>\n",
+       "      <td>26.079230</td>\n",
+       "      <td>60.857084</td>\n",
+       "      <td>5.402947</td>\n",
+       "      <td>1009.713446</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>836.750000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Spring</th>\n",
+       "      <td>652.250000</td>\n",
+       "      <td>28.526393</td>\n",
+       "      <td>45.224855</td>\n",
+       "      <td>8.497904</td>\n",
+       "      <td>1007.402135</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>653.250000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Summer</th>\n",
+       "      <td>744.250000</td>\n",
+       "      <td>31.755920</td>\n",
+       "      <td>64.054365</td>\n",
+       "      <td>7.892030</td>\n",
+       "      <td>999.525478</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>745.250000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Winter</th>\n",
+       "      <td>690.237569</td>\n",
+       "      <td>15.463316</td>\n",
+       "      <td>73.153305</td>\n",
+       "      <td>5.377517</td>\n",
+       "      <td>1016.731648</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>691.237569</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Unnamed: 0   meantemp   humidity  wind_speed  meanpressure  \\\n",
+       "season                                                               \n",
+       "Autumn  835.750000  26.079230  60.857084    5.402947   1009.713446   \n",
+       "Spring  652.250000  28.526393  45.224855    8.497904   1007.402135   \n",
+       "Summer  744.250000  31.755920  64.054365    7.892030    999.525478   \n",
+       "Winter  690.237569  15.463316  73.153305    5.377517   1016.731648   \n",
+       "\n",
+       "        season_Autumn  season_Spring  season_Summer        time  \n",
+       "season                                                           \n",
+       "Autumn            1.0            0.0            0.0  836.750000  \n",
+       "Spring            0.0            1.0            0.0  653.250000  \n",
+       "Summer            0.0            0.0            1.0  745.250000  \n",
+       "Winter            0.0            0.0            0.0  691.237569  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_data.groupby(\"season\").mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
