--- a/documents/settings/settings.sty
+++ b/documents/settings/settings.sty
@@ -1,6 +1,8 @@
 % set the gap between the content and margins of page
 \geometry{
 top = 2.0cm,
-bottom = 2cm
+bottom = 2cm,
+left = 2.6cm,
+right = 2.6cm
 }
 
