Raw latex file, waiting to be compiled.

--- a/documents/main.tex
+++ b/documents/main.tex
@@ -126,7 +126,7 @@ by R language.
 
 \subsection{Comparisions with other models}
 In order to assess our model properly, we build five other models 
-in table(xxx) at the same time and use them fit and predict together.
+in table 3 at the same time and use them fit and predict together.
 
 \subsection{ModelFitting module of R}
 To fit these models quickly and easily, we choose R to build these models and 
