--- a/documents/main.tex
+++ b/documents/main.tex
@@ -6,7 +6,7 @@
 \input{settings/settings.sty}
 
 
-\title{Temperature forecast for Delhei with SARIMA-improved linear model}
+\title{Temperature forecast for Delhi with SARIMA-improved linear model}
 \author{Feng Gu(T00751197), Yishu Liu(T00728937), Haoran He(T00749480)}
 \date{\today}
 
@@ -19,9 +19,9 @@
 
 The present study investigates regional temperature trends in Delhi.
  By applying time series analysis techniques, historical temperature data were analyzed, and various models, 
- including the SARIMA model, standard linear model, and other benchmark forecasting models, 
+ including the dynamic regression model, standard linear model, and other benchmark forecasting models, 
  were constructed and evaluated for their performance on both training and testing datasets. 
- The results indicate that the SARIMA model with dummy variables outperforms other models in predicting 
+ The results indicate that the dynamic regression with dummy variables outperforms other models in predicting 
  future temperatures. 
 
 Due to page limitations for formal content, most tables and figures referenced in this report 
@@ -138,7 +138,7 @@ saving plot objects quickly.
 
 \section{Result}
 The specific settings about models can be found in the R module, here we turn to
-our attention to the standard linear models and SARIMA-improved models, especially
+our attention to the standard linear models and dynamic regression models, especially
 changes of significance level for the three dummy variables.
 
 From table 4 and 5 in appendix, we found that models with dummy variabes are always
@@ -146,11 +146,11 @@ better in performance than models without that.
 The four varialbes: \textit{time, season\_Autumn, season\_Spring, season\_Summer}
 pass the 0.05 significance level test under the 
 $H_{0}\footnote{$H_0$: the coefficient is value of 0, namely no influcence from this variable}$
-assumption, however, they do not pass the corresponding tests in SARIMA models.
+assumption, however, they do not pass the corresponding tests in dynamic regression models.
 
-To the reason why these variables become not important in SARIMA models,
+To the reason why these variables become not important in dynamic regression,
 one explanation might be that the influences from these four variables can be captured
-well by the SARIMA part in the model, and the long-term trend with \textit{time} is also
+well by the errors of SARIMA process in the model, and the long-term trend with \textit{time} is also
 not imporant to mean temperature, based on the given sample.
 
 Additionally, there is one counterintuitive coefficent: the coefficient
@@ -165,21 +165,23 @@ use the model to forecast, becasue we are focusing on the relationship between t
 variables but the future values of target.
 
 According the table 4 and 7, we compared the performance of these models on
-training data and testing data, finally chose the SARIMA with dummy variables
+training data and testing data, finally chose the dynamic regression with dummy variables
 as the model to represent the forecasts, information about this model is shown 
 in table 1.
 \begin{table}[!h]
     \centering
     \captionsetup{font=small} % Set caption to left-align and smaller font
-    \caption{\textit{Summay about the SARIMA model.
+    \caption{\textit{Summay about the dynamic regression model.
     Including the coefficents, tests about residuals from training data,
-    and criteria about performance from testing data.}}
+    and criteria about performance from testing data.
+    (Note: the dynamic regression model here is called 'sarima\_dummy' in R code
+     and tables in appendix)}}
     \label{tab:model_summary_combined}
     \begin{tabular}{lccccc}
     \toprule
     \textbf{Metric} & \textbf{ME} & \textbf{RMSE} & \textbf{MAE} & \textbf{MPE} \\
     \midrule
-    \multirow{2}{*}{sarima\_dummy} 
+    \multirow{2}{*}{dynamic regression}
         & 0.5447 & 3.0829 & 2.6184 & -0.079 \\
         \cmidrule{2-5}
         & \textbf{MAPE} & \textbf{ACF1} & \textbf{log\_lik} & \textbf{AIC} \\
@@ -202,7 +204,7 @@ in table 1.
     \midrule
     \textbf{Other Metrics} & \textbf{sigma2} & \textbf{log\_lik} & \textbf{AICc} & \textbf{BIC} \\
     \cmidrule{1-5}
-    \multirow{2}{*}{sarima\_dummy} & 1.5048 & -2369.349 & 4762.914 & 4826.149  \\
+    \multirow{2}{*}{dynamic regression} & 1.5048 & -2369.349 & 4762.914 & 4826.149  \\
     \cmidrule{2-5}
      & \textbf{lb\_stat} & \textbf{lb\_pvalue} & \textbf{bp\_stat} & \textbf{bp\_pvalue} \\
      \cmidrule{2-5}
@@ -211,15 +213,15 @@ in table 1.
     \end{tabular}
 \end{table}
 
-We also visualized the forecasts for all models to make the comparisons more
-clear and direct.
+We also visualized the forecasts for all models to 
+make the comparisons more clear and direct in figure 1.
 \begin{figure}[!h]
     \centering
     \includegraphics[width=.8\textwidth]{images/forecasts_CI90.png}
     \captionsetup{font=small} % Set caption to left-align and smaller font
     \caption{\textit{Forecasts from eight models. 
     Becasue of the assumptions and settings to models,
-    we should compare the closes forecasts from SARIMA with forecasts
+    we should compare the closes forecasts from dynamic regression model with forecasts
     from other models.}}
     \label{fig:figure1}
 \end{figure}
